# DefectAnalysisArticle

./: .gitignore  CMakeLists.txt  README.md  produce_figures.bat
scripts/: CMakeLists.txt  results_analysis.py
src/: CMakeLists.txt
src/Analytic/: CMakeLists.txt  analytic.c  modelDescription.xml
src/Experiments/: CMakeLists.txt  article.cpp  article.h  examples.cpp  examples.h  fmi.cpp  fmi.h  main.cpp  results.cpp  results.h  signal.cpp  signal.h
src/OscillatorOmega2Tau/: CMakeLists.txt  OscillatorOmega2Tau.c  modelDescription.xml
src/OscillatorTau2Omega/: CMakeLists.txt  OscillatorTau2Omega.c  modelDescription.xml
src/Simple/: CMakeLists.txt  modelDescription.xml  simple.c
src/TwoMassRotationalOscillator/: CMakeLists.txt  TwoMassRotationalOscillator.c  modelDescription.xml
src/include/: CMakeLists.txt  template.h
sundials/examples/arkode/C_serial/: CMakeLists.txt
sundials/examples/cvode/serial/: CMakeLists.txt
sundials/examples/cvodes/serial/: CMakeLists.txt
sundials/examples/ida/serial/: CMakeLists.txt
sundials/examples/idas/serial/: CMakeLists.txt
sundials/examples/kinsol/serial/: CMakeLists.txt
sundials/examples/nvector/serial/: CMakeLists.txt
sundials/include/sundials/: sundials_config.h
sundials/lib/: sundials_arkode.lib  sundials_cvode.lib  sundials_cvodes.lib  sundials_ida.lib  sundials_idas.lib  sundials_kinsol.lib  sundials_nvecserial.lib
tests/: CMakeLists.txt  tests.cpp
tests/testsundials/: CMakeLists.txt  testsundials.c
